--- a/src/mlr_nav2_puzzlebot/params/nav2_config.yaml
+++ b/src/mlr_nav2_puzzlebot/params/nav2_config.yaml
@@ -1,6 +1,6 @@
 amcl:
   ros__parameters:
-    use_sim_time: False
+    use_sim_time: True
     alpha1: 0.2
     alpha2: 0.2
     alpha3: 0.2
@@ -13,12 +13,12 @@ amcl:
     do_beamskip: false
     global_frame_id: "map"
     lambda_short: 0.1
-    laser_likelihood_max_dist: 1.0
-    laser_max_range: 4.0
+    laser_likelihood_max_dist: 2.0
+    laser_max_range: 20.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 90
-    max_particles: 2000
+    max_particles: 1700
     min_particles: 500
     odom_frame_id: "odom"
     pf_err: 0.05
@@ -132,8 +132,6 @@ controller_server:
       min_speed_xy: 0.0
       max_speed_xy: 0.22
       min_speed_theta: 0.0
-      # Add high threshold velocity for turtlebot 3 issue.
-      # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
       acc_lim_x: 2.5
       acc_lim_y: 0.0
       acc_lim_theta: 3.2
@@ -183,8 +181,8 @@ local_costmap:
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        inflation_radius: 0.3
-        cost_scaling_factor: 0.5
+        inflation_radius: 0.17
+        cost_scaling_factor: 3.0
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -276,8 +274,8 @@ global_costmap:
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 0.5
-        inflation_radius: 0.3
+        cost_scaling_factor: 4.0
+        inflation_radius: 0.17
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
