--- a/src/mlr_nav2_puzzlebot/params/nav2_config.yaml
+++ b/src/mlr_nav2_puzzlebot/params/nav2_config.yaml
@@ -1,24 +1,24 @@
 amcl:
   ros__parameters:
     use_sim_time: True
-    alpha1: 0.2
-    alpha2: 0.2
-    alpha3: 0.2
-    alpha4: 0.2
+    alpha1: 0.1
+    alpha2: 0.1
+    alpha3: 0.1
+    alpha4: 0.1
     base_frame_id: "base_footprint"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
     beam_skip_threshold: 0.3
-    do_beamskip: false
+    do_beamskip: true
     global_frame_id: "map"
     lambda_short: 0.1
-    laser_likelihood_max_dist: 2.0
+    laser_likelihood_max_dist: 1.0
     laser_max_range: 12.0
     laser_min_range: 0.15
     laser_model_type: "likelihood_field"
-    max_beams: 60
-    max_particles: 2000
-    min_particles: 500
+    max_beams: 90
+    max_particles: 1000
+    min_particles: 300
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
@@ -32,9 +32,9 @@ amcl:
     transform_tolerance: 0.5
     update_min_a: 0.05
     update_min_d: 0.02
-    z_hit: 0.5
+    z_hit: 0.8
     z_max: 0.05
-    z_rand: 0.5
+    z_rand: 0.2
     z_short: 0.05
     scan_topic: scan
 
@@ -173,10 +173,10 @@ local_costmap:
       robot_base_frame: base_link
       use_sim_time: True
       rolling_window: true
-      width: 2
-      height: 2
-      resolution: 0.05
-      robot_radius: 0.20
+      width: 1.5
+      height: 1.5
+      resolution: 0.025
+      robot_radius: 0.15
       plugins: ["obstacle_layer", "voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
